버튼 컴포넌트 만들기 (1) - 프로젝트 세팅 & variant, color

--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -2,6 +2,7 @@
   "name": "@fastcampus/storybook",
   "packageManager": "yarn@3.6.3",
   "devDependencies": {
+    "@fastcampus/react-components-button": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
     "@fastcampus/themes": "workspace:^",
     "@storybook/addon-essentials": "^7.4.0",
