아코디언 컴포넌트 만들기

--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -25,6 +25,7 @@
     "build": "storybook build"
   },
   "dependencies": {
+    "@fastcampus/react-components-accordion": "workspace:^",
     "@fastcampus/react-hooks-button": "workspace:^"
   }
 }
