--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@fastcampus/react-components-accordion": "workspace:^",
+    "@fastcampus/react-components-input": "workspace:^",
     "@fastcampus/react-hooks-button": "workspace:^"
   }
 }
