--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -13,14 +13,22 @@
     "@storybook/react": "^7.4.0",
     "@storybook/react-vite": "^7.4.0",
     "@storybook/testing-library": "^0.2.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.5.1",
+    "@vitejs/plugin-react": "^4.1.0",
+    "happy-dom": "^12.5.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.4.0",
     "storybook-addon-root-attributes": "^2.0.3",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vitest": "^0.34.6"
   },
   "scripts": {
+    "test": "vitest",
     "storybook": "storybook dev -p 6006",
     "build": "storybook build"
   },
