CI/CD 구성하기 - github action

--- a/services/storybook/package.json
+++ b/services/storybook/package.json
@@ -31,10 +31,11 @@
     "vitest": "^0.34.6"
   },
   "scripts": {
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "storybook": "storybook dev -p 6006",
-    "build": "storybook build",
+    "build": "npx chromatic --project-token=chpt_6cd150f094040e8",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=chpt_6cd150f094040e8"
   },
