강의 목록 Section 만들기 (2) - swiper

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -4,3 +4,6 @@ packageExtensions:
   "local-pkg@*":
     dependencies:
       "happy-dom": "^12.5.0"
+  "swiper@*":
+    dependencies:
+      "react": "^18.0.2"
