--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -14,7 +14,8 @@
     "@fastcampus/themes": "workspace:^",
     "next": "13.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^10.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
