--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fastcampus/react-components-accordion": "workspace:^",
+    "@fastcampus/react-components-button": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
     "@fastcampus/themes": "workspace:^",
     "next": "13.5.4",
