--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -14,6 +14,7 @@
     "@fastcampus/react-components-button": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
     "@fastcampus/themes": "workspace:^",
+    "@monaco-editor/react": "^4.6.0",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
