--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -18,6 +18,7 @@
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "short-unique-id": "^5.0.3",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
