--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -13,6 +13,7 @@
     "@fastcampus/react-components-accordion": "workspace:^",
     "@fastcampus/react-components-button": "workspace:^",
     "@fastcampus/react-components-layout": "workspace:^",
+    "@fastcampus/react-components-toast": "workspace:^",
     "@fastcampus/themes": "workspace:^",
     "@monaco-editor/react": "^4.6.0",
     "next": "13.5.4",
