--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -20,7 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "short-unique-id": "^5.0.3",
-    "swiper": "^10.3.1"
+    "swiper": "^10.3.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
