--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -16,6 +16,7 @@
     "@fastcampus/react-components-toast": "workspace:^",
     "@fastcampus/themes": "workspace:^",
     "@monaco-editor/react": "^4.6.0",
+    "axios": "^1.5.1",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
