--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -17,6 +17,7 @@
     "@fastcampus/themes": "workspace:^",
     "@monaco-editor/react": "^4.6.0",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
