--- a/services/page-builder/package.json
+++ b/services/page-builder/package.json
@@ -22,6 +22,7 @@
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "short-unique-id": "^5.0.3",
     "swiper": "^10.3.1",
     "zod": "^3.22.4"
