--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -14,6 +14,7 @@
     "@vanilla-extract/css": "^1.13.0",
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.5.0",
+    "googleapis": "^128.0.0",
     "next": "13.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
