--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -16,6 +16,7 @@
     "@vanilla-extract/recipes": "^0.5.0",
     "googleapis": "^128.0.0",
     "next": "13.5.4",
+    "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
