--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -20,7 +20,8 @@
     "next": "13.5.4",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3"
   },
   "devDependencies": {
     "@types/node": "^20.8.3",
