인기 동영상 목록 Mocking 데이터 추가하기

--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -32,5 +32,8 @@
     "@vanilla-extract/next-plugin": "^2.3.2",
     "msw": "^2.0.9",
     "typescript": "^5.2.2"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
