통합 테스트 세팅

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -10,3 +10,6 @@ packageExtensions:
   "@aws-sdk/core@*":
     dependencies:
       "tslib": "*"
+  "react-intersection-observer@*":
+    dependencies:
+      "react-dom": "*"
