--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "nx": "^16.8.1",
     "prettier": "^3.0.3",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "vite": "^4.4.9"
   }
 }
