--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "packageManager": "yarn@3.6.3",
   "scripts": {
+    "test": "vitest run",
+    "test:watch": "vitest",
     "dev": "next dev",
     "dev:mocking": "NEXT_PUBLIC_MOCKING=true next dev",
     "build": "next build",
@@ -26,12 +28,20 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.25",
     "@types/react-dom": "^18.2.11",
     "@vanilla-extract/next-plugin": "^2.3.2",
+    "@vanilla-extract/vite-plugin": "^3.9.2",
+    "@vitejs/plugin-react": "^4.2.0",
+    "happy-dom": "^12.10.3",
     "msw": "^2.0.9",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest": "^0.34.6"
   },
   "msw": {
     "workerDirectory": "public"
