--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -19,6 +19,7 @@
     "@vanilla-extract/css": "^1.13.0",
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.5.0",
+    "clsx": "^2.0.0",
     "googleapis": "^128.0.0",
     "next": "13.5.4",
     "query-string": "^8.1.0",
