숏츠 동영상 컴포넌트 구현

--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -25,7 +25,8 @@
     "query-string": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.3"
+    "react-intersection-observer": "^9.5.3",
+    "react-youtube": "^10.1.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
