--- a/services/youtube/package.json
+++ b/services/youtube/package.json
@@ -20,6 +20,7 @@
     "@vanilla-extract/dynamic": "^2.0.3",
     "@vanilla-extract/recipes": "^0.5.0",
     "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "googleapis": "^128.0.0",
     "next": "13.5.4",
     "query-string": "^8.1.0",
